[project]
name = "huoke-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "mcp>=1.28.1",
    "playwright>=1.61.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.59.0",
    "watchdog>=6.0.0",
    "xhshow>=0.2.0",
]
